--- a/Habbo Server.csproj
+++ b/Habbo Server.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{1C9B9BBA-E628-4170-A9AF-46934CA74EA7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>habbo_v1</RootNamespace>
-    <AssemblyName>Habbo v1</AssemblyName>
+    <RootNamespace>habbo_server</RootNamespace>
+    <AssemblyName>Habbo Server</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -18,6 +18,7 @@
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
     <TargetFrameworkProfile />
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -30,7 +31,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -89,7 +89,7 @@
     <Compile Include="Manager\Inifile.cs" />
     <Compile Include="Manager\Usermanager.cs" />
     <Compile Include="MySQL\MySQL.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="Habbo Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sockets\PacketHelper.cs" />
     <Compile Include="Sockets\ServerSocket.cs" />
@@ -119,6 +119,11 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="config.default">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
